fix: WEB-49 Fixed various table overflows in both desktop and mobile versions

--- a/src/assets/scss/_tables.scss
+++ b/src/assets/scss/_tables.scss
@@ -9,9 +9,8 @@ table.confluenceTable {
   width: 100%;
   table-layout: fixed;
 
-  /* Fix Medium-size tables */
-  &[data-layout="wide"] {
-    table-layout: auto;
+  colgroup col {
+    width: auto!important;
   }
 }
 
